LabAssignment2/Tast2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-website-service
spec:
  selector:
    uri: example.com
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
